<resources>

    <string name="app_name">GitBet</string>
    <string name="tab_login_user">GİRİŞ YAP</string>
    <string name="tab_signup_user">ÜYE OL</string>
    <string name="welcome_app_text">GitBete Hoşgeldiniz!</string>

    <string name="email_address">E-Mail Adresi</string>
    <string name="password">Parola</string>
    <string name="password_repeat">Parola Tekrarla</string>
    <string name="remember">Beni Hatırla</string>
    <string name="password_forget">Şifremi Unuttum!</string>
    <string name="contract_read">Son Kullanıcı Lisans Sözleşmesini Okudum Onaylıyorum.</string>

    <string name="empty_area">Boş Alan Bırakmayınızsss</string>
    <string name="login_password_error_message">Girdiğiniz Parola Hatalı</string>
    <string name="email_not_registered">Girmiş Olduğunuz E-Mail Adresi Sisteme Kayıtlı Değildir</string>
    <string name="email_error_message">Lütfen geçerli bir email giriniz</string>
    <string name="create_password_error_message">Lütfen Daha Güçlü Bir Parola Giriniz</string>
    <string name="create_password_repeat_error_message">Girdiğiniz Parolalar Eşleşmiyor</string>

    <string name="welcome">Hoşgeldiniz</string>
    <string name="create_complete">Kayıt Başarılı</string>
    <string name="login_complete">Giriş Başarılı</string>
    <string name="log_out">Çıkış Yapıldı</string>
    <string name="preference_file_key">com.oguzhangungor.gitbet</string>

    <string name="navigator_menu_home">Anasayfa</string>
    <string name="navigator_menu_topten">Top 10</string>
    <string name="navigator_menu_results">Sonuçlar </string>
    <string name="navigator_menu_profile">Profil </string>


    <string name="firebase_table_name_DailyBet">MatchBets</string>
    <string name="firebase_table_name_TopTenBet">TopTen</string>
    <string name="firebase_table_name_BeforeBet">BeforeBet</string>

    <string name="topten_update_text">Her Saat Başı Güncelleme Olacaktır.</string>
    <string name="result_date_text">1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_repeat_text">Şifre Tekrarla</string>
    <string name="new_password_text">Yeni Şifre</string>
    <string name="result">Sonuç</string>

    <string name="send_mail_complete">Mail Gönderildi</string>
    <string name="send_mail_failed">Sistemde Kağıtlı olmayan bir Mail Girdiniz</string>

    <string name="user_contract_failed">Sözleşmeyi Onaylamanız Gerekmektedir</string>
    <string name="user_contract_title">Üyelik Sözleşmesi</string>
    <string name="forget_password_fragment_title">Şifremi Unuttum Sayfası</string>


    <string name="user_contract_text"><b>SANAL ORTAM BAYİ ÜYELİK SÖZLEŞMESİ</b>
        <p><b>1.TARAFLAR</b></p>

        1.1 İşbu üyelik Sözleşmesi (Sözleşme olarak anılacaktır.) D Elektronik Şans Oyunları ve Yayıncılık A.Ş. (“Sanal Ortam Bayi” olarak anılacaktır.) ile adresi ve ad/soyadı “Üye Bilgileri” sahasında beyan edilen kişi (“Üye” olarak anılacaktır.) arasında aşağıdaki hüküm ve şartlar kapsamında akdedilmiştir.

        <p><b>2. TANIMLAR</b></p>
        2.1 İşbu Sözleşme’nin uygulanmasında;

        <p><b>Banka</b>: Bankacılık sistemi içinde var olan herhangi bir bankayı,</p>

    <p><b>Bilet</b>: Üyenin işaretlediği kupon karşılığında üyeye gönderilen ve oynanan kuponun onayı olarak saklanması gereken numarayı da ihtiva eden elektronik bilgiyi veya üyenin satın aldığı piyango biletinin elektronik ortamdaki içeriğini,</p>
        <p><b>Hesabım Menüsü</b>: Sanal Ortam Bayi oyun kanallarından erişim sağlanan, üyenin Sanal Ortam Bayi nezdindeki üye hesabına gerçekleştirdiği para transferlerinin hesap hareketlerini görebildiği, banka transfer isteklerini gerçekleştirebildiği, oynadığı oyun bilgilerini takip edebildiği ve sair izin verilen işlemleri yapabildiği kişisel alanı,</p>
        <p><b>Kişisel Veri</b>: Kimliği belirli veya belirlenebilir gerçek kişiye ilişkin her türlü bilgiyi</p>
        <p><b> Kupon</b>: Sabit ihtimalli ve müşterek bahis oyunlarının Sanal Ortam Bayi alt yapısı üzerinden oynanabilmesi için üyeye sunulan elektronik bilgiyi,</p>
    </string>
    <string name="title_team">Karşılaşma</string>
    <string name="title_bet">Tahmin</string>
    <string name="title_time">Saat</string>
    <string name="title_rate">Oran</string>

</resources>