<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/login_user_button"
        android:layout_width="329dp"
        android:layout_height="40dp"
        android:layout_marginBottom="70dp"
        android:src="@drawable/loginbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/login_password_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/passwordtextbackground"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="40dp"
        android:textSize="@dimen/textbox_text_size"

        app:layout_constraintBottom_toTopOf="@+id/rememberCheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/login_email_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_size"
        android:background="@drawable/emailtextbackground"
        android:hint="@string/email_address"
        android:inputType="text"
        android:maxLines="1"
        android:paddingLeft="@dimen/textbox_padding_left"
        android:textSize="@dimen/textbox_text_size"
        app:layout_constraintBottom_toTopOf="@id/login_password_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/rememberCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:buttonTint="@color/checkbox"
        android:text="@string/remember"
        android:textSize="@dimen/textbox_text_size"
        app:layout_constraintBottom_toTopOf="@id/login_user_button"
        app:layout_constraintLeft_toLeftOf="@+id/login_password_editText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/large_size"
        android:text="@string/password_forget"
        android:textColor="@color/checkbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:clickable="true"
        android:id="@+id/forget_password_textview"/>

</androidx.constraintlayout.widget.ConstraintLayout>