<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/create_user_button"
        android:layout_width="329dp"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/large_size"
        android:src="@drawable/loginbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/create_password_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_size"
        android:background="@drawable/passwordtextbackground"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"

        android:paddingLeft="@dimen/textbox_padding_left"
        android:textSize="@dimen/textbox_text_size"
        app:layout_constraintBottom_toTopOf="@+id/password_repeat_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/create_mail_address_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_size"
        android:background="@drawable/emailtextbackground"
        android:hint="@string/email_address"
        android:inputType="text"
        android:maxLines="1"

        android:paddingLeft="@dimen/textbox_padding_left"
        android:textSize="@dimen/textbox_text_size"
        app:layout_constraintBottom_toTopOf="@id/create_password_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password_repeat_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_size"
        android:background="@drawable/passwordtextbackground"
        android:hint="@string/password_repeat"
        android:inputType="textPassword"
        android:maxLines="1"

        android:paddingLeft="@dimen/textbox_padding_left"
        android:textSize="@dimen/textbox_text_size"
        app:layout_constraintBottom_toTopOf="@+id/user_agreement_checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/user_agreement_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:buttonTint="@color/checkbox"
        android:text="@string/contract_read"
        android:textSize="@dimen/checkbox_text_size"
        app:layout_constraintBottom_toTopOf="@id/create_user_button"
        app:layout_constraintLeft_toLeftOf="@id/password_repeat_editText" />

</androidx.constraintlayout.widget.ConstraintLayout>