<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feed.daily.DailyFeedFragment"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/feed_title"
        android:layout_width="match_parent"
        android:weightSum="7"
        android:layout_height="wrap_content"
        android:background="@color/checkbox"
        android:gravity="center_vertical"
        android:padding="2dp"
        android:layout_alignParentTop="true"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_time"
            android:id="@+id/saat_textView"
            android:theme="@style/textTheme"
            android:textColor="@color/white"
            android:textStyle="bold" />



        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_weight="3.2"
            android:layout_height="wrap_content"
            android:theme="@style/textTheme"
            android:gravity="center"
            android:text="@string/title_team"
            android:id="@+id/karsilasma_text"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tahmin_textView"
            android:layout_width="0dp"
            android:layout_weight="1.1"
            android:layout_height="wrap_content"
            android:theme="@style/textTheme"
            android:gravity="center"
            android:text="@string/title_bet"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/oran_textView"
            android:layout_width="0dp"
            android:layout_weight="0.9"
            android:layout_height="wrap_content"
            android:theme="@style/textTheme"
            android:gravity="center"
            android:text="@string/title_rate"
            android:textStyle="bold" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/daily_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/feed_title"
        />

    <RelativeLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loading_bg_color"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/loading_card_view_item_size"
            android:layout_height="@dimen/loading_card_view_item_size"
            android:layout_centerInParent="true"
            app:cardCornerRadius="@dimen/loading_card_view_radius" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieView"
            android:layout_width="@dimen/loading_lottie_view_item_size"
            android:layout_height="@dimen/loading_lottie_view_item_size"
            android:layout_centerInParent="true"
            android:elevation="@dimen/lottie_view_elevation"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/mloading"
            app:lottie_loop="true"
            app:lottie_speed="2" />
    </RelativeLayout>

</RelativeLayout>